WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
92382
Web Inspector: Edits of styles declared after invalid selector are not applied
https://bugs.webkit.org/show_bug.cgi?id=92382
Summary
Web Inspector: Edits of styles declared after invalid selector are not applied
Pavel Feldman
Reported
2012-07-26 07:20:16 PDT
Downstream bug:
http://code.google.com/p/chromium/issues/detail?id=136648
Attachments
Patch
(4.98 KB, patch)
2012-07-26 07:29 PDT
,
Pavel Feldman
vsevik
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Pavel Feldman
Comment 1
2012-07-26 07:29:56 PDT
Created
attachment 154652
[details]
Patch
Pavel Feldman
Comment 2
2012-07-26 08:08:39 PDT
Committed
r123746
: <
http://trac.webkit.org/changeset/123746
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug