Web Inspector: Edits of styles declared after invalid selector are not applied https://bugs.webkit.org/show_bug.cgi?id=92382

Reviewed by Vsevolod Vlasov.

Source/WebCore:

Now popping selectorless rules as well.

Test: inspector/styles/styles-edit-property-after-invalid-rule.html

* css/CSSParser.cpp:
(WebCore::CSSParser::createStyleRule):

LayoutTests:

Additional information of the change such as approach, rationale.

* inspector/styles/styles-edit-property-after-invalid-rule-expected.txt: Added.
* inspector/styles/styles-edit-property-after-invalid-rule.html: Added.

Canonical link: https://commits.webkit.org/110182@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123746 268f45cc-cd09-0410-ab3c-d52691b4dbfc